# nogizaka-appear-info

./: README.md
info/: README.md  pyproject.toml
info/info/: get_bs4.py  main.py  streamlit.py
info/tests/: test_info.py
nogi-calendar/: package-lock.json  package.json
nogi-calendar/src/: App.tsx  Modal.css  Modal.tsx
